[gd_scene load_steps=8 format=3 uid="uid://7uv4wjpm161c"]

[ext_resource type="Script" path="res://scenes/ui/playerHud.gd" id="1_ha58l"]
[ext_resource type="PackedScene" uid="uid://c8411fpc13xh8" path="res://scenes/ui/healthBar.tscn" id="1_qgobx"]
[ext_resource type="FontFile" uid="uid://bnako7dhjcnkd" path="res://assets/pixel_font.ttf" id="3_eeg8c"]
[ext_resource type="Texture2D" uid="uid://hpyqqsevrw17" path="res://assets/Sprites/Extra/health_bar_decoration.png" id="4_opruc"]
[ext_resource type="Texture2D" uid="uid://bx8qpt4stg2ay" path="res://assets/Sprites/Extra/health_bar.png" id="5_o7qbw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dp2ff"]
bg_color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2rsya"]
bg_color = Color(0.192157, 0.105882, 0.572549, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0062, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHud" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ha58l")

[node name="HealthBar" parent="CanvasLayer/PlayerHud" instance=ExtResource("1_qgobx")]
layout_mode = 0
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = 120.0
offset_top = 50.0
offset_right = 570.0
offset_bottom = 62.0
grow_vertical = 1
rounded = true

[node name="AbilityMeter" type="ProgressBar" parent="CanvasLayer/PlayerHud"]
layout_mode = 0
offset_left = 120.0
offset_top = 75.0
offset_right = 220.0
offset_bottom = 85.0
theme_override_styles/background = SubResource("StyleBoxFlat_dp2ff")
theme_override_styles/fill = SubResource("StyleBoxFlat_2rsya")
value = 60.0
show_percentage = false

[node name="Abilities" type="Label" parent="CanvasLayer/PlayerHud"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1600.0
offset_top = 50.0
offset_right = 1855.0
offset_bottom = 172.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "WASD: Move
Right Click/Space Attack"

[node name="HealthVal" type="Label" parent="CanvasLayer/PlayerHud"]
layout_mode = 0
offset_left = 35.0
offset_top = 43.0
offset_right = 115.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.215686, 0.54902, 0.478431, 1)
theme_override_fonts/font = ExtResource("3_eeg8c")
theme_override_font_sizes/font_size = 25
text = "100"

[node name="SkillVal" type="Label" parent="CanvasLayer/PlayerHud"]
layout_mode = 0
offset_left = 230.0
offset_top = 73.0
offset_right = 262.0
offset_bottom = 93.0
theme_override_colors/font_color = Color(0.192157, 0.105882, 0.572549, 1)
theme_override_fonts/font = ExtResource("3_eeg8c")
theme_override_font_sizes/font_size = 15
text = "60"

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/PlayerHud"]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 30.0
offset_right = 114.0
offset_bottom = 48.0
scale = Vector2(6, 4)
value = 100.0
stretch_margin_left = 40
stretch_margin_right = 40
texture_under = ExtResource("4_opruc")
texture_progress = ExtResource("5_o7qbw")
texture_progress_offset = Vector2(14, 0)

[node name="WolfBossHud" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -80.0
offset_right = -460.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="HealthBar" parent="CanvasLayer/WolfBossHud" instance=ExtResource("1_qgobx")]
layout_mode = 0
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_right = 1000.0
offset_bottom = 12.0
grow_vertical = 1
max_value = 1000.0
